fix phone style to work on firefox

--- a/all.css
+++ b/all.css
@@ -371,7 +371,8 @@ body .content-wrapper .content .phone-wrapper .phone .inner-phone {
 }
 body .content-wrapper .content .phone-wrapper .phone .inner-phone .camera {
   background: #58595b;
-  margin-top: 10%;
+  position: relative;
+  top: 4.6%;
   width: 4.4%;
   height: 2.1%;
   -webkit-border-radius: 100%;
@@ -379,7 +380,8 @@ body .content-wrapper .content .phone-wrapper .phone .inner-phone .camera {
 }
 body .content-wrapper .content .phone-wrapper .phone .inner-phone .speaker {
   background: #58595b;
-  margin-top: 3.5%;
+  position: relative;
+  top: 6.4%;
   width: 20%;
   height: 1.6%;
   border-top-right-radius: 12% 60%;
@@ -390,7 +392,7 @@ body .content-wrapper .content .phone-wrapper .phone .inner-phone .speaker {
 body .content-wrapper .content .phone-wrapper .phone .inner-phone .screen {
   background: #58595b;
   position: relative;
-  margin-top: 9.5%;
+  top: 11%;
   width: 85%;
   height: 72%;
 }
@@ -402,7 +404,8 @@ body .content-wrapper .content .phone-wrapper .phone .inner-phone .screen iframe
 }
 body .content-wrapper .content .phone-wrapper .phone .inner-phone .button {
   background: #c4c4c3;
-  margin-top: 6.9%;
+  position: relative;
+  top: 14.5%;
   width: 15.5%;
   height: 7.4%;
   -webkit-border-radius: 100%;
